# upgrade_simulation_check

./: .gitignore  pyproject.toml
notebooks/: geant_mcpe_comparisons.ipynb  plot_helpers.py  ppc_clsim_mcpe_comparison.ipynb
scripts/: README.md  inject_leptons.py  outfile  run_injection.sh  run_ppc.sh  setup.sh
scripts/0_injection/: README.md  inject_leptons.py  run_injection.sh
scripts/1_ppc_prop/: README.md  run_ppc.sh  submit_run_ppc.py
scripts/2_clsim_prop/: README.md  run_clsim_prop.sh  submit_run_clsim_prop.py
scripts/3_clsim_mcpe/: README.md  clsim_mcpe_converter.py  run_clsim_mcpe_converter.sh
scripts/4_clsim_prop_no_geant/: README.md  run_clsim_prop_no_geant.sh  submit_run_clsim_prop_no_geant.py
scripts/5_clsim_mcpe_no_geant/: README.md  clsim_mcpe_converter.py  run_clsim_mcpe_converter.sh
scripts/ppc_prop/: README.md
tests/: test_spe_compensation.py
upgrade_simulation_check/: add_lepton.py  mcpe_variables.py  utils.py
