[tool.poetry]
name = "upgrade-simulation-check"
version = "0.1.0"
description = ""
authors = ["jlazar17 <jeff.p.lazar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
